@@ -10,6 +10,9 @@ Changes to 1.0.2
 * Fix leaving behind zombie processes when running programs from the IDE
 * Fix building without gtksourceview
 * Fix building with older gtk by not using GTK_STOCK_INFO
+* IsPerfectSquare works on rationals as it should
+* don't mod arguments to trig functions ln, log10, log2, zeta, gamma,
+  exp, round, trunc, floor, ceil, float, CompositeSimpsonsRule
 
 Changes to 1.0.1
 
