@@ -1,3 +1,10 @@
+Tue Nov 20 23:13:36 2007  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/funclib.c: no mod of arguments to round, ceil, trunc, all trig
+	  functions, all log functions, exp, CompositeSimpsonsRule.  It
+	  just doesn't make sense to do so.  Fix IsPerfectSquare for
+	  rationals.
+
 Tue Nov 20 12:26:58 2007  Jiri (George) Lebl <jirka@5z.com>
 
 	* src/gnome-genius.c: one more untranslated string marked
